// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error thrown when instanceof check and duck typing fails: graphqlOperationExecutionResult 1`] = `
Object {
  "data": Object {
    "users": Array [
      Object {
        "profile": null,
      },
    ],
  },
  "errors": Array [
    [GraphQLError: Check "PrismaClientOnContext" failed. The GraphQL context.prisma value is not an instance of the Prisma Client.],
  ],
}
`;

exports[`error thrown when instanceof check and duck typing fails: graphqlSchemaSDL 1`] = `
"
type Query {
  users: [User!]!
}

type User {
  id: ID!
  profile: Profile
}

type Profile {
  id: ID!
}
"
`;

exports[`warning emitted when instanceof check but duck typing succeeds: graphqlOperationExecutionResult 1`] = `
Object {
  "data": Object {
    "users": Array [
      Object {
        "profile": null,
      },
    ],
  },
}
`;

exports[`warning emitted when instanceof check but duck typing succeeds: graphqlSchemaSDL 1`] = `
"
type Query {
  users: [User!]!
}

type User {
  id: ID!
  profile: Profile
}

type Profile {
  id: ID!
}
"
`;
